--- a/Activity_IntentFilter/app/src/main/res/values/strings.xml
+++ b/Activity_IntentFilter/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Activity_Intent</string>
+    <string name="number">number</string>
+    <string name="custom">Custom</string>
+    <string name="default_01">Default</string>
 </resources>
